--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-howler": "^5.0.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.0.1",
-    "use-sound": "^2.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
