--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.15.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-howler": "^5.0.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.0.1",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
