--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,12 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+  "short_name": "Applause",
+  "name": "Applause",
+  "author": "Dillon Hammer",
+  "icons": {
+    "48": "favicon.ico",
+    "32": "favicon-32x32.png",
+    "16": "favicon-16x16.png"
+  },
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
