--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "react-dom": "^17.0.2",
     "react-howler": "^5.0.0",
     "react-scripts": "4.0.3",
+    "serve": "^14.2.0",
     "socket.io-client": "^4.0.1",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "react-scripts --openssl-legacy-provider start",
     "start": "react-scripts --openssl-legacy-provider start",
     "start:prod": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "build:prod": "react-scripts build",
+    "prod": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
