--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
     "react-dom": "^17.0.2",
     "react-howler": "^5.0.0",
     "react-scripts": "4.0.3",
-    "serve": "^14.2.0",
+    "serve": "^14.2.1",
     "socket.io-client": "^4.0.1",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "start:prod": "react-scripts start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "build:prod": "react-scripts build",
+    "build": "REACT_APP_SERVER_BASE=https://api.dillonhammer.com REACT_APP_SERVER_PATH=/applause/ react-scripts --openssl-legacy-provider build",
+    "build-copy": "rm -rf static-build && cp -R build static-build",
     "prod": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
